update clean references

--- a/manuscript/references_clean.bib
+++ b/manuscript/references_clean.bib
@@ -946,6 +946,20 @@
   YEAR         = {2005},
 }
 
+@ARTICLE{Swaggart.ea2015:Genomicsofpretermbirth,
+  ABSTRACT     = {The molecular mechanisms controlling human birth timing at term, or resulting in preterm birth, have been the focus of considerable investigation, but limited insights have been gained over the past 50 years. In part, these processes have remained elusive because of divergence in reproductive strategies and physiology shown by model organisms, making extrapolation to humans uncertain. Here, we summarize the evolution of progesterone signaling and variation in pregnancy maintenance and termination. We use this comparative physiology to support the hypothesis that selective pressure on genomic loci involved in the timing of parturition have shaped human birth timing, and that these loci can be identified with comparative genomic strategies. Previous limitations imposed by divergence of mechanisms provide an important new opportunity to elucidate fundamental pathways of parturition control through increasing availability of sequenced genomes and associated reproductive physiology characteristics across diverse organisms.},
+  AUTHOR       = {Kayleigh A Swaggart and Mihaela Pavlicev and Louis J Muglia},
+  DOI          = {10.1101/cshperspect.a023127},
+  JOURNALTITLE = {Cold Spring Harb Perspect Med},
+  MONTH        = {Feb},
+  NUMBER       = {2},
+  PAGES        = {023127},
+  PMID         = {25646385},
+  TITLE        = {Genomics of preterm birth},
+  VOLUME       = {5},
+  YEAR         = {2015},
+}
+
 @ARTICLE{Wallis2009:ProlactininAfrotheriacharacterization,
   ABSTRACT     = {Pituitary prolactin shows an episodic pattern of molecular evolution, with occasional short bursts of rapid change imposed on a generally rather slow evolutionary rate. In mammals, episodes of rapid change occurred in the evolution of primates, cetartiodactyls, rodents and the elephant. The bursts of rapid evolution in cetartiodactyls and rodents were followed by duplications of the prolactin gene that gave rise to large families of prolactin-related proteins including placental lactogens, while in primates the burst was followed by corresponding duplications of the related GH gene. The position in elephant is less clear. Extensive data relating to the genomic sequences of elephant and two additional members of the group Afrotheria are now available, and have been used here to characterize the prolactin genes in these species and explore whether additional prolactin-related genes are present. The results confirm the rapid evolution of elephant (Loxodonta africana) prolactin - the sequence of elephant prolactin is substantially different from that predicted for the ancestral placental mammal. Hyrax (Procavia capensis) prolactin is even more divergent but tenrec (Echinops telfairi) prolactin is strongly conserved. No evidence was obtained from searches of public databases for additional genes encoding prolactin-like proteins in any of these species. Detailed analysis of evolutionary rates, and other factors, indicates that the episode of rapid change in hyrax, and probably elephant, was adaptive, though the nature of the associated biological change(s) is not clear.},
   AUTHOR       = {Michael Wallis},
@@ -1403,6 +1417,15 @@
   TITLE        = {Comparative analysis of encephalization in mammals reveals relaxed constraints on anthropoid primate and cetacean brain scaling},
   VOLUME       = {25},
   YEAR         = {2012},
+}
+
+@REPORT{ACOG2013:hypertensionpregnancy,
+  AUTHOR      = {{Task Force on Hypertension in Pregnancy}},
+  INSTITUTION = {American College of Obstetricians and Gynecologists},
+  ISBN        = {978-1-934984-28-4},
+  TITLE       = {Hypertension in Prgenancy},
+  TYPE        = {techreport},
+  YEAR        = {2013},
 }
 
 @ARTICLE{Baird1981:Eclampsiainlowlandgorilla,
